--- a/style.css
+++ b/style.css
@@ -781,7 +781,7 @@
         margin-left: 53px;
     }
     .centre{
-        margin-left: 154px;
+        margin-left: 110px;
     }
     .container{
         display: flex;
@@ -811,6 +811,12 @@
     }
     .home{
         height: 88vh;
+    }
+    .content h1{
+        margin: 11px 0px;
+    }
+    .animation1{
+        line-height: 55px;
     }
 
 }
